# python-oop-project-101

./: README.md  pyproject.toml
tests/: test_number_validator.py  test_string_validator.py
validator/: __init__.py  base_validator.py  number_validator.py  string_validator.py
