[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["zhukata <zhukata@gmail.com>"]
readme = "README.md"
packages = [
  { include = "validator" },
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
